Fixed overflow with long names

--- a/RunningCause/static/css/sass/user-list.scss
+++ b/RunningCause/static/css/sass/user-list.scss
@@ -2,6 +2,10 @@
   .card-img-top {
     width: 100%;
   }
+  .card-title {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
   a.person {
     color: $body-color;
     text-decoration: none;
